rnsc/test_data/rns_integration/error/parser/outer_class_sub_directive/outside_inner_classes_attr.rns
; Tests that .outer_class outside .inner_classes_attr body is detected.
; Expected error: E-007 (unexpected token in class body)

.class public MyClass
.super java/lang/Object

.outer_class com/profs/Main

.class_end
